assets/css/blueprint.css
/* ... */
.padding {
  padding: 1rem !important;
}
.padding--xs {
  padding: 0.25rem !important;
}
.padding--sm {
  padding: 0.5rem !important;
}
.padding--lg {
  padding: 2rem !important;
}
.padding--xl {
  padding: 4rem !important;
}
.padding--none {
  padding: 0 !important;
}
.padding--top {
  padding-top: 1rem !important;
}
.padding--top--xs {
  padding-top: 0.25rem !important;
}
.padding--top--sm {
  padding-top: 0.5rem !important;
}
.padding--top--md {
  padding-top: 1rem !important;
}
.padding--top--lg {
  padding-top: 2rem !important;
}
.padding--top--xl {
  padding-top: 4rem !important;
}
.padding--top--none {
  padding-top: 0 !important;
}
.padding--right {
  padding-right: 1rem !important;
}
.padding--right--xs {
  padding-right: 0.25rem !important;
}
.padding--right--sm {
  padding-right: 0.5rem !important;
}
.padding--right--lg {
  padding-right: 2rem !important;
}
.padding--right--xl {
  padding-right: 4rem !important;
}
.padding--right--none {
  padding-right: 0 !important;
}
.padding--bottom {
  padding-bottom: 1rem !important;
}
.padding--bottom--xs {
  padding-bottom: 0.25rem !important;
}
.padding--bottom--sm {
  padding-bottom: 0.5rem !important;
}
.padding--bottom--md {
  padding-bottom: 1rem !important;
}
.padding--bottom--lg {
  padding-bottom: 2rem !important;
}
.padding--bottom--xl {
  padding-bottom: 4rem !important;
}
.padding--bottom--none {
  padding-bottom: 0 !important;
}
.padding--left {
  padding-left: 1rem !important;
}
.padding--left--xs {
  padding-left: 0.25rem !important;
}
.padding--left--sm {
  padding-left: 0.5rem !important;
}
.padding--left--lg {
  padding-left: 2rem !important;
}
.padding--left--xl {
  padding-left: 4rem !important;
}
.padding--left--none {
  padding-left: 0 !important;
}

.hide {
  display: none !important;
  visibility: hidden !important;
}

.show {
  display: block;
  visibility: visible;
}

.is-position-relative {
  position: relative;
}

.is-offset-sideNav {
  position: fixed;
  width: 22%;
  top: 40px;
}
.touch .is-offset-sideNav {
  position: relative !important;
  width: 100%;
}

#loading-spinner {
  text-align: center;
}

.lds-default {
  display: inline-block;
  position: relative;
  width: 64px;
  height: 64px;
}
.lds-default div {
  position: absolute;
  width: 5px;
  height: 5px;
  background: #323232;
  border-radius: 50%;
  animation: lds-default 1.2s linear infinite;
}
.lds-default div:nth-child(1) {
  animation-delay: 0s;
  top: 29px;
  left: 53px;
}
.lds-default div:nth-child(2) {
  animation-delay: -0.1s;
  top: 18px;
  left: 50px;
}
.lds-default div:nth-child(3) {
  animation-delay: -0.2s;
  top: 9px;
  left: 41px;
}
.lds-default div:nth-child(4) {
  animation-delay: -0.3s;
  top: 6px;
  left: 29px;
}
.lds-default div:nth-child(5) {
  animation-delay: -0.4s;
  top: 9px;
  left: 18px;
}
.lds-default div:nth-child(6) {
  animation-delay: -0.5s;
  top: 18px;
  left: 9px;
}
.lds-default div:nth-child(7) {
  animation-delay: -0.6s;
  top: 29px;
  left: 6px;
}
.lds-default div:nth-child(8) {
  animation-delay: -0.7s;
  top: 41px;
  left: 9px;
}
.lds-default div:nth-child(9) {
  animation-delay: -0.8s;
  top: 50px;
  left: 18px;
}
.lds-default div:nth-child(10) {
  animation-delay: -0.9s;
  top: 53px;
  left: 29px;
}
.lds-default div:nth-child(11) {
  animation-delay: -1s;
  top: 50px;
  left: 41px;
}
.lds-default div:nth-child(12) {
  animation-delay: -1.1s;
  top: 41px;
  left: 50px;
}

@keyframes lds-default {
  0%,
  20%,
  80%,
  100% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.5);
  }
}

.alias {
  cursor: alias;
}
.all-scroll {
  cursor: all-scroll;
}
.auto {
  cursor: auto;
}
.cell {
  cursor: cell;
}
.context-menu {
  cursor: context-menu;
}
.col-resize {
  cursor: col-resize;
}
.copy {
  cursor: copy;
}
.crosshair {
  cursor: crosshair;
}
.default {
  cursor: default;
}
.e-resize {
  cursor: e-resize;
}
.ew-resize {
  cursor: ew-resize;
}
.grab {
  cursor: -webkit-grab;
  cursor: grab;
}
.grabbing {
  cursor: -webkit-grabbing;
  cursor: grabbing;
}
.help {
  cursor: help;
}
.move {
  cursor: move;
}
.n-resize {
  cursor: n-resize;
}
.ne-resize {
  cursor: ne-resize;
}
.nesw-resize {
  cursor: nesw-resize;
}
.ns-resize {
  cursor: ns-resize;
}
.nw-resize {
  cursor: nw-resize;
}
.nwse-resize {
  cursor: nwse-resize;
}
.no-drop {
  cursor: no-drop;
}
.none {
  cursor: none;
}
.not-allowed {
  cursor: not-allowed;
}
.pointer {
  cursor: pointer;
}
.progress {
  cursor: progress;
}
.row-resize {
  cursor: row-resize;
}
.s-resize {
  cursor: s-resize;
}
.se-resize {
  cursor: se-resize;
}
.sw-resize {
  cursor: sw-resize;
}
.text {
  cursor: text;
}
.url {
  cursor: url(myBall.cur), auto;
}
.w-resize {
  cursor: w-resize;
}
.wait {
  cursor: wait;
}
.zoom-in {
  cursor: zoom-in;
}
.zoom-out {
  cursor: zoom-out;
}
.remove-after:after {
  content: "" !important
}
.dropdown-input:focus {
  outline: none;
}
.datagov-search-border {
  border-bottom: 1px solid #D6D6D6;
}
.remove-border {
  border: none;
}
.datagov-focus-border:focus {
  border: 2px solid #000AFF;
}
.datagov-search-element a {
  /* Specific to pdfs in the datagov table view */
  display: inline-block;
  /* Overwrite existing margin-bottom that all a elements have */
  margin-bottom: 0;
}
.datagov-search-element a[href$=".pdf"]:before {
  /* Specific to pdfs to center icon in the datagov table view */
  display: flex;
}
/*# sourceMappingURL=blueprint.css.map */

